# Snake

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/Core/: App.cpp  App.h  Component.hpp  Config.h  Context.hpp  ResourceManager.cpp  ResourceManager.h  System.hpp  World.hpp
src/Game/Builders/: EntityBuilder.hpp
src/Game/Systems/: AiControlSystem.hpp  AiSpawnSystem.hpp  CameraSystem.hpp  ClassicBackgroundRenderSystem.hpp  CollisionSystem.hpp  DeathSystem.hpp  FoodRenderSystem.hpp  FoodSpawnSystem.hpp  GameInputSystem.hpp  InputSystem.hpp  PauseRenderSystem.hpp  ShopSystem.hpp  SnakeBodyMoveSystem.hpp  SnakeGrowthSystem.hpp  SnakeHeadMoveSystem.hpp  SnakeRenderSystem.hpp  StaticBackgroundRenderSystem.hpp
src/Game/Worlds/: TestWorld.cpp  TestWorld.h
src/UI/: UiBuilder.hpp  UiComponents.hpp  UiSystem.hpp
